objects/game__c.object
<CustomObject>
    <fields>
        <fullName>basketball__c</fullName>
        <label>basketball</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indoor_games__c</fullName>
        <label>indoor games</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>chess</fullName>
                </value>
                <value>
                    <fullName>badminton</fullName>
                </value>
                <value>
                    <fullName>table tennis</fullName>
                </value>
                <value>
                    <fullName>carrom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>players__c</fullName>
        <label>players</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>game</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>my_list_view</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>my list view</label>
    </listViews>
    <nameField>
        <label>game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>games</pluralLabel>
    <recordTypes>
        <fullName>men</fullName>
        <active>true</active>
        <label>men</label>
    </recordTypes>
    <recordTypes>
        <fullName>women</fullName>
        <active>true</active>
        <label>women</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>game_point</fullName>
        <active>true</active>
        <errorConditionFormula>players__c  &gt; 1</errorConditionFormula>
        <errorMessage>numbers of players should be greater than 1</errorMessage>
    </validationRules>
</CustomObject>